@@ -8,10 +8,19 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jetty-http2-tests</artifactId>
-  <name>Jetty Core :: HTTP2 :: Tests</name>
+  <name>Core :: HTTP2 :: Tests</name>
 
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            @{argLine} ${jetty.surefire.argLine}
+            --add-reads org.eclipse.jetty.http2.server=org.eclipse.jetty.logging
+          </argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>h2spec-maven-plugin</artifactId>
